kube-streaming/kube-streaming.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kube-streaming
  namespace: kube-streaming
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kube-streaming
  template:
    metadata:
      labels:
        app: kube-streaming
    spec:
      serviceAccountName: kube-streaming-service-account
      nodeSelector:
        kubernetes.io/arch: arm64
      containers:
      - name: kube-streaming
        image: docker.prayujt.com/kube-streaming-api
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: kube-streaming
  namespace: kube-streaming
spec:
  type: ClusterIP
  selector:
    app: kube-streaming
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
